# grok2api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.cloudflare.md  config.defaults.toml  docker-compose.yml  main.py  package.json  pyproject.toml  readme.md  wrangler.toml
.github/workflows/: cloudflare-workers.yml
app/: __init__.py
app/api/v1/: admin.py  chat.py  files.py  image.py  models.py  video.py
app/core/: auth.py  config.py  exceptions.py  legacy_migration.py  logger.py  response_middleware.py  storage.py
app/services/: base.py
app/services/grok/: assets.py  chat.py  media.py  model.py  processor.py  retry.py  statsig.py  usage.py
app/services/register/: __init__.py  manager.py  runner.py  solver.py
app/services/token/: __init__.py  manager.py  models.py  pool.py  scheduler.py  service.py
app/static/: _worker.js
app/static/cache/: cache.css  cache.html  cache.js
app/static/common/: admin-auth.js  common.css  draggable.js  footer.html  footer.js  header.html  header.js  toast.css  toast.js
app/static/config/: config.css  config.html  config.js
app/static/datacenter/: datacenter.css  datacenter.html  datacenter.js
app/static/login/: login.css  login.html  login.js
app/template/: admin.html  login.html
docs/: README.en.md
migrations/: 0004_settings_sections.sql
scripts/: entrypoint.sh  init_storage.sh
scripts/turnstile_solver/: api_solver.py  browser_configs.py  db_results.py
src/: env.ts  index.ts  settings.ts
src/grok/: conversation.ts  create.ts  models.ts  processor.ts
src/routes/: admin.ts  openai.ts
(+8 files in other folders)
